MicroblogLDA_pred + update_counts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ export(postproc_MicroblogLDA)
 export(postproc_TwitterLDA)
 export(pred_HashtagLDA)
 export(pred_LDA)
+export(pred_MicroblogLDA)
 export(pred_TwitterLDA)
