--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CGS_HashtagLDA)
 export(CGS_LDA)
 export(CGS_MicroblogLDA)
 export(CGS_TwitterLDA)
+export(dt_to_t)
 export(postproc_HashtagLDA)
 export(postproc_LDA)
 export(postproc_MicroblogLDA)
@@ -12,3 +13,6 @@ export(pred_HashtagLDA)
 export(pred_LDA)
 export(pred_MicroblogLDA)
 export(pred_TwitterLDA)
+importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
+useDynLib(mdtm, .registration = TRUE)
