--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(CGS_HashtagLDA)
 export(CGS_LDA)
 export(CGS_MicroblogLDA)
 export(CGS_TwitterLDA)
+export(CGS_clickbaitLDA)
 export(dt_to_t)
 export(postproc_HashtagLDA)
 export(postproc_LDA)
 export(postproc_MicroblogLDA)
 export(postproc_TwitterLDA)
+export(postproc_clickbaitLDA)
 export(pred_HashtagLDA)
 export(pred_LDA)
 export(pred_MicroblogLDA)
